fixed overflow inside card component

--- a/src/styles/variables/color.scss
+++ b/src/styles/variables/color.scss
@@ -4,7 +4,7 @@ $primary-color: #9E9E9E;
 $primary-text-color: #212121;
 $secondary-text-color: #757575;
 $accent-text-color: #fff;
-$accent-color: #35AFEA;
+$accent-color: #0288D1;
 $bg-color: #ECEFF1;
 $divider-color: #eeeeee;
 $bg-header-color: #039be5;
